--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -12,7 +12,9 @@
     "esModuleInterop": true,
     "skipLibCheck": true,
 
-    "sourceMap": true
+    "sourceMap": true,
+
+    "forceConsistentCasingInFileNames": true
   },
   "include": ["src"]
 }
